给按钮加上ripple效果

--- a/example/index.html
+++ b/example/index.html
@@ -14,6 +14,7 @@ require.config({
     paths: {
         'melon': '../src',
         'react': '../dep/react/react',
+        'react-motion': '../dep/react-motion/build/react-motion',
         'react-dom': '../dep/react/react-dom',
         'underscore': '../dep/underscore/underscore'
     },
