改成相对路径

--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <title>Melon</title>
     <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="asset/main.e43bf2f4.css">
+    <link rel="stylesheet" href="./asset/main.e43bf2f4.css">
     <meta name="format-detection" content="telephone=no">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
 <div id="main"></div>
 <script src="http://s1.bdstatic.com/r/www/cache/ecom/esl/2-0-8/esl.js"></script>
-<script src="/asset/bundle/inf.dc20447e.js"></script>
-<script src="/asset/main.b841632a.js"></script>
+<script src="./asset/bundle/inf.dc20447e.js"></script>
+<script src="./asset/main.b841632a.js"></script>
 <script>
 require.config({
         'baseUrl': './asset',
