删掉多余的文件

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
 <div id="main"></div>
 <script src="http://s1.bdstatic.com/r/www/cache/ecom/esl/2-0-8/esl.js"></script>
-<!--embedbundle:/src/bundle/inf.js-->
-<!--embedbundle:/src/main.js-->
+<!--embedbundle:./src/bundle/inf.js-->
+<!--embedbundle:./src/main.js-->
 <script>
 require.config({
     baseUrl: './src',
