添加第一个示例

--- a/index.html
+++ b/index.html
@@ -4,28 +4,27 @@
     <meta charset="UTF-8">
     <title>Melon</title>
     <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="./asset/main.e43bf2f4.css">
-    <meta name="format-detection" content="telephone=no">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="./asset/main.61b99190.css">
+    <link rel="shortcut icon" href="favicon.7aa56319.png" type="image/x-png">
 </head>
 <body>
 <div id="main"></div>
 <script src="http://s1.bdstatic.com/r/www/cache/ecom/esl/2-0-8/esl.js"></script>
-<script src="./asset/bundle/inf.dc20447e.js"></script>
-<script src="./asset/main.b841632a.js"></script>
+<script src="./asset/bundle/inf.01da24ca.js"></script>
+<script src="./asset/main.1ced4dbb.js"></script>
 <script>
 require.config({
         'baseUrl': './asset',
         'paths': {
             'react': '../dep/react/react-with-addons',
+            'react-motion': '../dep/react-motion/build/react-motion',
             'react-dom': '../dep/react/react-dom',
             'es6-promise': '../dep/es6-promise/promise',
             'numen': '../dep/numen/dist',
             'melon': '../dep/melon/dist',
             'fetch': '../dep/fetch/fetch',
             'underscore': '../dep/underscore/underscore',
-            'hljs': '../dep/highlight/highlight.pack',
-            'react-motion': '../dep/react-motion/build/react-motion'
+            'hljs': '../dep/highlight/highlight.pack'
         },
         'packages': [{
                 'name': 'ei',
