--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
     <link rel="shortcut icon" href="favicon.png" type="image/x-png">
 </head>
 <body>
-<div id="main"></div>
+<div id="main">
+    <div class="ui-loading">
+        <h1>Your page is loading.</h1>
+        <div class="ball ball-anim"></div>
+    </div>
+</div>
 <script src="http://s1.bdstatic.com/r/www/cache/ecom/esl/2-0-8/esl.js"></script>
 <!--embedbundle:./src/bundle/inf.js-->
 <!--embedbundle:./src/main.js-->
