--- a/index.html
+++ b/index.html
@@ -4,14 +4,19 @@
     <meta charset="UTF-8">
     <title>Melon</title>
     <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="./asset/main.61b99190.css">
-    <link rel="shortcut icon" href="favicon.7aa56319.png" type="image/x-png">
+    <link rel="stylesheet" href="./asset/main.f014a115.css">
+    <link rel="shortcut icon" href="favicon.png" type="image/x-png">
 </head>
 <body>
-<div id="main"></div>
+<div id="main">
+    <div class="ui-loading">
+        <h1>Your page is loading.</h1>
+        <div class="ball ball-anim"></div>
+    </div>
+</div>
 <script src="http://s1.bdstatic.com/r/www/cache/ecom/esl/2-0-8/esl.js"></script>
-<script src="./asset/bundle/inf.e898a6f1.js"></script>
-<script src="./asset/main.906ecc84.js"></script>
+<script src="./asset/bundle/inf.c45668f4.js"></script>
+<script src="./asset/main.0e062290.js"></script>
 <script>
 require.config({
         'baseUrl': './asset',
