升级melon到最新版

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Melon</title>
     <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="./asset/main.8026fdb9.css">
+    <link rel="stylesheet" href="./asset/main.37218dc6.css">
     <link rel="shortcut icon" href="favicon.png" type="image/x-png">
 </head>
 <body>
@@ -15,13 +15,13 @@
     </div>
 </div>
 <script src="http://s1.bdstatic.com/r/www/cache/ecom/esl/2-1-2/esl.js"></script>
-<script src="./asset/bundle/inf.bfec6de9.js"></script>
-<script src="./asset/main.a0dcca46.js"></script>
+<script src="./asset/bundle/inf.551f78ab.js"></script>
+<script src="./asset/main.ebba0653.js"></script>
 <script>
 require.config({
         'baseUrl': './asset',
         'paths': {
-            'react': '../dep/react/react-with-addons',
+            'react': '../dep/react/react',
             'react-motion': '../dep/react-motion/build/react-motion',
             'react-dom': '../dep/react/react-dom',
             'es6-promise': '../dep/es6-promise/promise',
