升级melon到最新版

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 require.config({
     baseUrl: './src',
     paths: {
-        'react': '../dep/react/react-with-addons',
+        'react': '../dep/react/react',
         'react-motion': '../dep/react-motion/build/react-motion',
         'react-dom': '../dep/react/react-dom',
         'es6-promise': '../dep/es6-promise/promise',
