--- a/example/index.html
+++ b/example/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <meta charset="UTF-8">
     <title>melon example</title>
     <link rel="stylesheet" href="index.styl">
@@ -21,7 +22,8 @@ require.config({
         'react-motion': '../dep/react-motion/build/react-motion',
         'react-dom': '../dep/react/react-dom',
         'underscore': '../dep/underscore/underscore',
-        'es5-shim': '../dep/es5-shim/es5-shim'
+        'es5-shim': '../dep/es5-shim/es5-shim',
+        'moment': '../dep/moment/moment'
     },
     waitSeconds: 5
 });
