--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="ball ball-anim"></div>
     </div>
 </div>
-<script src="http://s1.bdstatic.com/r/www/cache/ecom/esl/2-1-2/esl.js"></script>
+<script src="http://s1.bdstatic.com/r/www/cache/ecom/esl/2-1-4/esl.js"></script>
 <!--embedbundle:./src/bundle/inf.js-->
 <!--embedbundle:./src/main.js-->
 <script>
@@ -28,7 +28,8 @@ require.config({
         'numen': '../dep/numen/dist',
         'melon': '../dep/melon/dist',
         'underscore': '../dep/underscore/underscore',
-        'hljs': '../dep/highlight/highlight.pack'
+        'hljs': '../dep/highlight/highlight.pack',
+        'moment': '../dep/moment/moment'
     },
     packages: [{
         name: 'ei',
