--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Melon</title>
     <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="./src/main.styl">
+    <link rel="stylesheet" href="./asset/main.6202055f.css">
     <link rel="shortcut icon" href="favicon.png" type="image/x-png">
 </head>
 <body>
@@ -15,29 +15,29 @@
     </div>
 </div>
 <script src="http://s1.bdstatic.com/r/www/cache/ecom/esl/2-1-4/esl.js"></script>
-<!--embedbundle:./src/bundle/inf.js-->
-<!--embedbundle:./src/main.js-->
+<script src="./asset/bundle/inf.9629cdd6.js"></script>
+<script src="./asset/main.d2a17b1f.js"></script>
 <script>
 require.config({
-    baseUrl: './src',
-    paths: {
-        'react': '../dep/react/react',
-        'react-motion': '../dep/react-motion/build/react-motion',
-        'react-dom': '../dep/react/react-dom',
-        'es6-promise': '../dep/es6-promise/promise',
-        'numen': '../dep/numen/dist',
-        'melon': '../dep/melon/dist',
-        'underscore': '../dep/underscore/underscore',
-        'hljs': '../dep/highlight/highlight.pack',
-        'moment': '../dep/moment/moment'
-    },
-    packages: [{
-        name: 'ei',
-        location: '../dep/ei/dist',
-        main: 'main'
-    }],
-    waitSeconds: 5
-});
+        'baseUrl': './asset',
+        'paths': {
+            'react': '../dep/react/react',
+            'react-motion': '../dep/react-motion/build/react-motion',
+            'react-dom': '../dep/react/react-dom',
+            'es6-promise': '../dep/es6-promise/promise',
+            'numen': '../dep/numen/dist',
+            'melon': '../dep/melon/dist',
+            'underscore': '../dep/underscore/underscore',
+            'hljs': '../dep/highlight/highlight.pack',
+            'moment': '../dep/moment/moment'
+        },
+        'packages': [{
+                'name': 'ei',
+                'location': '../dep/ei/dist',
+                'main': 'main'
+            }],
+        'waitSeconds': 5
+    });
 require(['main'], function (main) {
     main.init();
 });
