--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 <script>
 require.config({
     baseUrl: './src',
+    waitSeconds: 5,
     paths: {
         'react': '../dep/react/react',
         'react-motion': '../dep/react-motion/build/react-motion',
@@ -35,8 +36,7 @@ require.config({
         name: 'ei',
         location: '../dep/ei/dist',
         main: 'main'
-    }],
-    waitSeconds: 5
+    }]
 });
 require(['main'], function (main) {
     main.init();
