修改icons；添加安装方法

--- a/index.html
+++ b/index.html
@@ -4,8 +4,17 @@
     <meta charset="UTF-8">
     <title>Melon</title>
     <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="./asset/main.6202055f.css">
+    <link rel="stylesheet" href="./asset/main.aea21ed1.css">
     <link rel="shortcut icon" href="favicon.png" type="image/x-png">
+    <script>
+        var _hmt = _hmt || [];
+        (function() {
+          var hm = document.createElement("script");
+          hm.src = "//hm.baidu.com/hm.js?11e3ed3d29e68ef35d42fb9e88579ce1";
+          var s = document.getElementsByTagName("script")[0];
+          s.parentNode.insertBefore(hm, s);
+        })();
+    </script>
 </head>
 <body>
 <div id="main">
@@ -16,7 +25,7 @@
 </div>
 <script src="http://s1.bdstatic.com/r/www/cache/ecom/esl/2-1-4/esl.js"></script>
 <script src="./asset/bundle/inf.128d3a24.js"></script>
-<script src="./asset/main.9222d62e.js"></script>
+<script src="./asset/main.3defeac4.js"></script>
 <script>
 require.config({
         'baseUrl': './asset',
