添加百度统计；修改icon；添加安装方法

--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="./src/main.styl">
     <link rel="shortcut icon" href="favicon.png" type="image/x-png">
+    <script>
+        var _hmt = _hmt || [];
+        (function() {
+          var hm = document.createElement("script");
+          hm.src = "//hm.baidu.com/hm.js?11e3ed3d29e68ef35d42fb9e88579ce1";
+          var s = document.getElementsByTagName("script")[0];
+          s.parentNode.insertBefore(hm, s);
+        })();
+    </script>
 </head>
 <body>
 <div id="main">
