melon升级0.3；修改Dialog示例的bug

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Melon</title>
     <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="./asset/main.2e3e5f72.css">
+    <link rel="stylesheet" href="./asset/main.0145b4ff.css">
     <link rel="shortcut icon" href="favicon.png" type="image/x-png">
     <script>
         var _hmt = _hmt || [];
@@ -24,8 +24,8 @@
     </div>
 </div>
 <script src="http://s1.bdstatic.com/r/www/cache/ecom/esl/2-1-4/esl.js"></script>
-<script src="./asset/bundle/inf.49af949f.js"></script>
-<script src="./asset/main.8aba64a8.js"></script>
+<script src="./asset/bundle/inf.5792ff9b.js"></script>
+<script src="./asset/main.a47d7651.js"></script>
 <script>
 require.config({
         'baseUrl': './asset',
@@ -36,8 +36,11 @@ require.config({
             'es6-promise': '../dep/es6-promise/promise',
             'numen': '../dep/numen/dist',
             'melon': '../dep/melon/dist',
+            'melon-core': '../dep/melon-core/dist',
+            'melon-timepicker': '../dep/melon-timepicker/dist',
+            'melon-calendar': '../dep/melon-calendar/dist',
             'underscore': '../dep/underscore/underscore',
-            'hljs': '../dep/highlight/highlight.pack',
+            'hljs': '../dep/highlight/build/highlight.pack',
             'moment': '../dep/moment/moment'
         },
         'packages': [{
