--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Melon</title>
     <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="./asset/main.0145b4ff.css">
+    <link rel="stylesheet" href="./src/main.styl">
     <link rel="shortcut icon" href="favicon.png" type="image/x-png">
     <script>
         var _hmt = _hmt || [];
@@ -15,7 +15,7 @@
           s.parentNode.insertBefore(hm, s);
         })();
     </script>
-</head>
+<link rel="shortcut icon" href="favicon.png"><link href="main.466b4.css" rel="stylesheet"></head>
 <body>
 <div id="main">
     <div class="ui-loading">
@@ -24,34 +24,5 @@
     </div>
 </div>
 <script src="http://s1.bdstatic.com/r/www/cache/ecom/esl/2-1-4/esl.js"></script>
-<script src="./asset/bundle/inf.46b76e5b.js"></script>
-<script src="./asset/main.a47d7651.js"></script>
-<script>
-require.config({
-        'baseUrl': './asset',
-        'paths': {
-            'react': '../dep/react/react',
-            'react-motion': '../dep/react-motion/build/react-motion',
-            'react-dom': '../dep/react/react-dom',
-            'es6-promise': '../dep/es6-promise/promise',
-            'numen': '../dep/numen/dist',
-            'melon': '../dep/melon/dist',
-            'melon-core': '../dep/melon-core/dist',
-            'melon-timepicker': '../dep/melon-timepicker/dist',
-            'melon-calendar': '../dep/melon-calendar/dist',
-            'underscore': '../dep/underscore/underscore',
-            'hljs': '../dep/highlight/build/highlight.pack',
-            'moment': '../dep/moment/moment'
-        },
-        'packages': [{
-                'name': 'ei',
-                'location': '../dep/ei/dist',
-                'main': 'main'
-            }]
-    });
-require(['main'], function (main) {
-    main.init();
-});
-</script>
-</body>
+<script type="text/javascript" src="asset/c549bd38.js"></script></body>
 </html>
