--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           s.parentNode.insertBefore(hm, s);
         })();
     </script>
-<link rel="shortcut icon" href="favicon.png"><link href="main.466b4.css" rel="stylesheet"></head>
+<link rel="shortcut icon" href="favicon.png"><link href="main.ae18b.css" rel="stylesheet"></head>
 <body>
 <div id="main">
     <div class="ui-loading">
@@ -22,5 +22,5 @@
         <div class="ball ball-anim"></div>
     </div>
 </div>
-<script type="text/javascript" src="asset/71b88f26.js"></script></body>
+<script type="text/javascript" src="asset/16498b8c.js"></script></body>
 </html>
