添加文档基础

--- a/example/index.html
+++ b/example/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="zh">
-<head>
-    <meta charset="UTF-8">
-    <title>melon example</title>
-    <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-    <meta name="viewport" content="initial-scale=1.0">
-</head>
-<body>
-<div id="app"></div>
-<!--@inject=inf.dll.js-->
-</body>
+    <head>
+        <meta charset="utf-8">
+        <title>melon - material ui components for react</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    </head>
+    <body>
+        <main id="app"></main>
+    </body>
 </html>
